# QtSTM-Interfase

./: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  serialporthandler.cpp  serialporthandler.hpp
lib/: CMakeLists.txt
lib/public/: commandsender.hpp  database.hpp  mainrecievehandler.hpp  senderconnector.hpp
lib/public/core/: deviceskeys.hpp  recieveevents.hpp  serialporthandler.hpp
lib/public/models/: variablemodel.hpp
lib/src/: commandsender.cpp  database.cpp  mainrecievehandler.cpp  senderconnector.cpp
lib/src/core/: deviceskeys.cpp  recieveevents.cpp  serialporthandler.cpp
lib/src/models/: variablemodel.cpp
static/: protocol.txt
ui/: CMakeLists.txt
ui/components/: slidervcomponent.cpp  slidervcomponent.hpp  slidervcomponent.hpp.autosave
ui/dialogs/: serialportcommunicationdialog.cpp  serialportcommunicationdialog.hpp  serialportdialog.cpp  serialportdialog.hpp
ui/src/: mainwindow.cpp  mainwindow.hpp
ui/view/: mainwindow.ui  serialportcommunicationdialog.ui  serialportdialog.ui  slidervcomponent.ui
